--- a/demo/demo.html
+++ b/demo/demo.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drake - OnePage Portfolio HTML5 Template</title>
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
 
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -91,7 +92,7 @@
                         </a>
                         <h3 class="title">
                             <a href="../home4.html" target="_blank">
-                                Stripes Wavy
+                                Liquids Wavy
                             </a>
                         </h3>
                     </div>
